--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Pacifico', cursive;
 }
 
 figure {
@@ -12,10 +13,18 @@ figure {
  height: 100vh;
 }
 
-h1{
+h1, h2{
   position: relative;
-  top: 5em;
-  color: #195905;
-  font-family: 'Pacifico', cursive;
+  color: green; /*#321414;*/
+  margin-bottom: 1em;
+  top: 4.5em;
   text-align: center;
+}
+
+i {
+  color: green; /*#321414;*/
+  position: relative;
+  justify-content: center;
+  top: 5em;
+  left: 
 }
