--- a/css/main.css
+++ b/css/main.css
@@ -6,18 +6,17 @@
 }
 
 figure {
- background-image: url(../assets/img/lasagna.jpg);
+ background-image: url(../assets/img/background.jpg);
  background-repeat: no-repeat;
- background-position: center center;
+ background-position: center bottom;
  background-size:cover;
  height: 100vh;
 }
 
 h1, h2{
   position: relative;
-  color: green; /*#321414;*/
-  margin-bottom: 1em;
-  top: 4.5em;
+  color: white; /*#321414;*/
+  margin-top: 6em;
   text-align: center;
 }
 
