--- a/views/filter.html
+++ b/views/filter.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Rye" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/filter.css">
-<body class="modal-open">
+<body >
   <header>
     <div class="container">
       <div class="row">
@@ -33,7 +33,7 @@
               <option class="pz" value="Pizza">Pizza</option>
               <option  class="cz" value="Calzone">Calzone</option>
               <option class="sg" value="Spaghetti">Spaghetti</option>
-              <option  class="fd" value="Fine Desserts">Fine desserts</option>
+              <option class="ds" value="Fine Desserts">Fine desserts</option>
             </select>
           </div>
         </div>
@@ -41,25 +41,25 @@
       <!-- food images: pizza -->
       <div id="PIZZA" class="row">
       <div class="img-rounded col-xs-12 col-md-4" >
-        <img class="modal-fade" src="../assets/img/pizza1.jpg" alt="1" id="pizza">
+        <img src="../assets/img/pizza1.jpg" alt="1" id="pizza">
       </div>
       <div class="img-rounded col-xs-12 col-md-4">
-       <img src="../assets/img/pizza2.jpg" alt="2" id="pizza">
+        <img src="../assets/img/pizza2.jpg" alt="2" id="pizza">
       </div>
       <div class="img-rounded col-xs-12 col-md-4">
-       <img src="../assets/img/pizza3.jpg" alt="3" id="pizza">
+        <img src="../assets/img/pizza3.jpg" alt="3" id="pizza">
       </div>
       </div>
       <!-- food images: calzone -->
       <div id="CALZONE" class="row">
       <div class="img-rounded col-xs-12 col-md-4">
-       <img src="../assets/img/calzone1.jpg" alt="1" id="calzone">
+        <img src="../assets/img/calzone1.jpg" alt="1" id="calzone">
       </div>
       <div class="img-rounded col-xs-12 col-md-4">
-       <img src="../assets/img/calzone2.jpg" alt="2" id="calzone">
+        <img src="../assets/img/calzone2.jpg" alt="2" id="calzone">
       </div>
       <div class="img-rounded col-xs-12 col-md-4">
-       <img src="../assets/img/calzone3.jpg" alt="3" id="calzone">
+        <img src="../assets/img/calzone3.jpg" alt="3" id="calzone">
       </div>
       </div>
       <!-- food images: sphaguetti -->
@@ -68,7 +68,7 @@
         <img src="../assets/img/fideos.jpg" alt="1" id="noodles">
       </div>
       <div class="img-rounded col-xs-12 col-md-4">
-       <img src="../assets/img/fideos2.jpg" alt="2" id="noodles">
+        <img src="../assets/img/fideos2.jpg" alt="2" id="noodles">
       </div>
       <div class="img-rounded col-xs-12 col-md-4">
         <img src="../assets/img/fideos3.jpg" alt="3" id="noodles">
@@ -77,7 +77,7 @@
       <!-- food images: desserts -->
       <div id="DESSERTS" class="row">
       <div class="img-rounded col-xs-12 col-md-4">
-        <img data-toggle="modal" src="../assets/img/riaciarelli.jpg" alt="1" id="desserts">
+        <img src="../assets/img/riaciarelli.jpg" alt="1" id="desserts">
       </div>
       <div class="img-rounded col-xs-12 col-md-4">
         <img src="../assets/img/sfrapole.jpg" alt="2" id="desserts">
@@ -86,6 +86,9 @@
         <img src="../assets/img/tiramisu.jpg" alt="3" id="desserts">
       </div>
       </div>
+
+
+
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
