--- a/css/filter.css
+++ b/css/filter.css
@@ -4,6 +4,10 @@
     padding: 0;
 	}
 
+html, body {
+  overflow: scroll;
+}
+
 	body {
     background-image: url(../assets/img/background2.webp);
     background-repeat: no-repeat;
