adding pop-up informative modal for food images

--- a/views/filter.html
+++ b/views/filter.html
@@ -40,55 +40,70 @@
       </div>
       <!-- food images: pizza -->
       <div id="PIZZA" class="row">
-      <div class="img-rounded col-xs-12 col-md-4" >
+      <div class="img-rounded col-xs-12 col-md-4" data-toggle="modal" data-target="#myModal">
         <img src="../assets/img/pizza1.jpg" alt="1" id="pizza">
       </div>
-      <div class="img-rounded col-xs-12 col-md-4">
+      <div class="img-rounded col-xs-12 col-md-4" data-toggle="modal" data-target="#myModal">
         <img src="../assets/img/pizza2.jpg" alt="2" id="pizza">
       </div>
-      <div class="img-rounded col-xs-12 col-md-4">
+      <div class="img-rounded col-xs-12 col-md-4" data-toggle="modal" data-target="#myModal">
         <img src="../assets/img/pizza3.jpg" alt="3" id="pizza">
       </div>
       </div>
       <!-- food images: calzone -->
       <div id="CALZONE" class="row">
-      <div class="img-rounded col-xs-12 col-md-4">
+      <div class="img-rounded col-xs-12 col-md-4" data-toggle="modal" data-target="#myModal">
         <img src="../assets/img/calzone1.jpg" alt="1" id="calzone">
       </div>
-      <div class="img-rounded col-xs-12 col-md-4">
+      <div class="img-rounded col-xs-12 col-md-4" data-toggle="modal" data-target="#myModal">
         <img src="../assets/img/calzone2.jpg" alt="2" id="calzone">
       </div>
-      <div class="img-rounded col-xs-12 col-md-4">
+      <div class="img-rounded col-xs-12 col-md-4" data-toggle="modal" data-target="#myModal">
         <img src="../assets/img/calzone3.jpg" alt="3" id="calzone">
       </div>
       </div>
       <!-- food images: sphaguetti -->
       <div id="NOODLES" class="row">
-      <div class="img-rounded col-xs-12 col-md-4">
+      <div class="img-rounded col-xs-12 col-md-4" data-toggle="modal" data-target="#myModal">
         <img src="../assets/img/fideos.jpg" alt="1" id="noodles">
       </div>
-      <div class="img-rounded col-xs-12 col-md-4">
+      <div class="img-rounded col-xs-12 col-md-4" data-toggle="modal" data-target="#myModal">
         <img src="../assets/img/fideos2.jpg" alt="2" id="noodles">
       </div>
-      <div class="img-rounded col-xs-12 col-md-4">
+      <div class="img-rounded col-xs-12 col-md-4" data-toggle="modal" data-target="#myModal">
         <img src="../assets/img/fideos3.jpg" alt="3" id="noodles">
       </div>
       </div>
       <!-- food images: desserts -->
       <div id="DESSERTS" class="row">
-      <div class="img-rounded col-xs-12 col-md-4">
+      <div class="img-rounded col-xs-12 col-md-4" data-toggle="modal" data-target="#myModal">
         <img src="../assets/img/riaciarelli.jpg" alt="1" id="desserts">
       </div>
-      <div class="img-rounded col-xs-12 col-md-4">
+      <div class="img-rounded col-xs-12 col-md-4" data-toggle="modal" data-target="#myModal">
         <img src="../assets/img/sfrapole.jpg" alt="2" id="desserts">
       </div>
-      <div class="img-rounded col-xs-12 col-md-4">
-        <img src="../assets/img/tiramisu.jpg" alt="3" id="desserts">
+      <div class="img-rounded col-xs-12 col-md-4" data-toggle="modal" data-target="#myModal">
+        <img a src="../assets/img/tiramisu.jpg" alt="3" id="desserts">
       </div>
       </div>
-
-
-
+      <!-- Modal/pop-up -->
+       <div class="modal fade"  tabindex="-1" role="dialog" id='myModal'>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        <p>One fine body&hellip;</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
